--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,10 @@ scikit-learn==0.18.1
 scipy==0.18.1
 six==1.10.0
 sklearn==0.0
-tensorflow==0.11.0
 Theano==0.8.2
+# to choose a tensor flow installation go to
+# https://github.com/tensorflow/tensorflow/blob/master/tensorflow/g3doc/get_started/os_setup.md
+
+# eg. linux cpu only
+https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.12.0rc0-cp27-none-linux_x86_64.whl
+#tensorflow==0.11.0
